# precomd

./: .cproject  .gitignore  .project  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.old  README  autogen.sh  configure  configure.ac  libtool  precomd.c
captures/: README  novacomd-capture-1.html  novacomd-capture-1.utl  novacomd-capture-2.html  novacomd-capture-2.utl
doc/: pmux_packet.txt  protocol.txt
src/: Makefile.am  novacom.c  novacom.h  novacom_private.h  pmux.c  pmux.h  precomd.c
test/: Makefile.am  fct.h  test_novacom.c
utils/: parselog
